<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="loading_name">오늘의\n주제는.</string>
    <string name="ad_reward_test_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="ad_reward_id">ca-app-pub-5645268985361077/7082741267</string>
    <string name="keyword_drawing_none">그림이 존재하지 않습니다! 그림을 그려 사용자들에게 보여주세요!</string>
    <string name="menu_draw">그림</string>
    <string name="menu_story">스토리</string>
    <string name="menu_setting">설정</string>
    <string name="main_dialog_content">나가면 그림이 저장되지 않습니다. 나가시겠습니까?</string>
    <!--    그림 그리는 화면-->
    <string name="drawing_new_keyword">새로운 주제</string>
    <string name="drawing_keyword_title">오늘의 주제</string>
    <string name="drawing_create_user_message">그림을 업로드하기 위해서는 사용자를 등록해야 합니다</string>
    <!--    업로드-->
    <string name="upload_success">저장에 성공했습니다</string>
    <string name="upload_content">그림을 설명하는 문구는 무엇일까요?? </string>
    <string name="upload_content_hint">그림을 설명해주세요</string>
    <string name="upload_name_tv">작가 이름</string>
    <string name="upload_upload_button">완료</string>
    <string name="upload_content_limit">%1$d/50</string>
    <string name="upload_title">업로드</string>
    <string name="upload_notice">빈 그림이거나 주제와 부적절한 그림일 경우 삭제 조치될 수 있습니다.</string>
    <!--    설정 화면-->
    <string name="setting_dialog_title">이름 변경</string>
    <string name="setting_not_user">미등록 계정</string>
    <string name="setting_develop_contract">개발자 연락처</string>
    <string name="setting_personal">기타</string>
    <string name="setting_notification">알림 설정</string>
    <string name="setting_opensource">오픈소스 라이선스</string>
    <string name="setting_version">버전 정보</string>
    <string name="setting_develop_mail">jaeryo2357@gmail.com</string>
    <string name="setting_name_empty_message">올바른 이름을 입력해주세요.</string>
    <string name="setting_name_dialog_content_hint">최초 1회 변경가능합니다</string>
    <!--    자세한 그림 보기 화면-->
    <string name="detail_keyword_title">그림의 주제</string>
    <string name="detail_favorite_count">좋아하는 사람 (%1$d)</string>
    <string name="detail_loading">불러오는중..</string>
    <string name="detail_report">신고하기</string>
    <string name="detail_comment_button">댓글 보기</string>
    <!--  스토리  -->
    <string name="story_all_button">전체 주제</string>
    <string name="story_keyword_button">이번 주제</string>
    <!--    알람-->
    <string name="notification_title">오늘의 주제는.</string>
    <string name="notification_description">오늘도 광고없이 그림 주제를 받아보세요! 하루에 최대 3번 새로운 그림 주제를 받을 수 있습니다.</string>
    <!--  버전 정보 -->
    <string name="version_title">버전정보</string>
    <string name="version_new_version">최신 버전을 사용 중입니다</string>
    <string name="version_old_version">지난 버전을 사용 중입니다</string>
    <string name="version_name_not_found">unknown version</string>
    <string name="version_info">현재 버전 %1$s</string>
    <string name="version_update">앱 업데이트 하러가기</string>
    <!-- 댓글 보기   -->
    <string name="comment_title">댓글</string>
    <string name="comment_edit_hint">댓글 작성</string>
    <string name="comment_post">작성</string>
    <string name="comment_size">총 %1$d개 댓글</string>
    <string name="comment_item_delete">삭제하기</string>
    <string name="comment_delete_dialog_title">댓글 삭제</string>
    <string name="comment_delete_dialog_negative">댓글을 삭제하시겠습니까?</string>
    <string name="comment_delete_dialog_positive">삭제</string>
    <string name="comment_delete_dialog_content">댓글을 삭제하시겠습니까?</string>
    <string name="comment_empty">비어있는 댓글은 등록할 수 없습니다</string>
</resources>